Se reordenan responsabilidades de los modulos data_loading y exploracion. El modulo rentabilidad genera reportes siguiendo la estructura modular. Rutas asignadas con exito

--- a/notebooks/analisis.ipynb
+++ b/notebooks/analisis.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "14580c0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import importlib\n",
+    "import src.rentabilidad\n",
+    "importlib.reload(src.rentabilidad)\n",
+    "\n",
+    "from src.rentabilidad import calcular_rentabilidad, resumen_rentabilidad\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "679d4ba5",
    "metadata": {},
@@ -10,30 +24,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5783f35c",
+   "execution_count": 118,
+   "id": "3bf87562",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
     "\n",
-    "# Agrega la raíz del proyecto al sys.path (necesario para importar módulos desde src)\n",
-    "# Esto permite que el script se ejecute desde cualquier directorio\n",
+    "# 1. Detectar raíz del proyecto (subiendo desde el cwd)\n",
+    "project_root = Path(os.getcwd()).resolve().parent  # sube un nivel desde notebooks/\n",
+    "sys.path.append(str(project_root))\n",
     "\n",
-    "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
-    "if project_root not in sys.path:\n",
-    "    sys.path.append(project_root)\n",
+    "# 2. Ruta hacia el módulo src/\n",
+    "src_path = project_root / \"src\"\n",
+    "if str(src_path) not in sys.path:\n",
+    "    sys.path.append(str(src_path))\n",
     "\n",
+    "# 3. Importar módulos desde src/\n",
     "from src.data_loading import (\n",
     "    cargar_datos_excel,\n",
+    ")\n",
+    "from src.exploracion import (\n",
     "    estandarizar_columnas,\n",
     "    convertir_fechas,\n",
-    "    guardar_procesado\n",
     ")\n",
-    "\n",
-    "import pandas as pd\n",
-    "import unicodedata"
+    "from src.rentabilidad import (\n",
+    "    calcular_rentabilidad,\n",
+    "    resumen_rentabilidad,\n",
+    ")\n",
+    "from src.exportacion import (\n",
+    "    exportar_excel,\n",
+    ")"
    ]
   },
   {
@@ -46,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 119,
    "id": "64e01490",
    "metadata": {},
    "outputs": [
@@ -104,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 120,
    "id": "2aed13e1",
    "metadata": {},
    "outputs": [
@@ -143,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 121,
    "id": "999882b6",
    "metadata": {},
    "outputs": [
@@ -182,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 122,
    "id": "af6d122d",
    "metadata": {},
    "outputs": [
@@ -192,7 +216,7 @@
        "<Axes: title={'center': 'Ventas totales por día'}, xlabel='fecha_salida'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -221,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 123,
    "id": "dab4d40d",
    "metadata": {},
    "outputs": [],
@@ -233,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 124,
    "id": "a17c6851",
    "metadata": {},
    "outputs": [
@@ -262,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 125,
    "id": "03cc68c7",
    "metadata": {},
    "outputs": [
@@ -312,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 126,
    "id": "3b4c05b8",
    "metadata": {},
    "outputs": [
@@ -326,7 +350,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 127,
    "id": "ce8ece65",
    "metadata": {},
    "outputs": [],
@@ -363,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 128,
    "id": "b27fa1c4",
    "metadata": {},
    "outputs": [
@@ -397,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 129,
    "id": "b8940456",
    "metadata": {},
    "outputs": [
@@ -418,7 +442,7 @@
        "Name: tiempo_entrega, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 130,
    "id": "5c225ca7",
    "metadata": {},
    "outputs": [],
@@ -448,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 131,
    "id": "c65918ea",
    "metadata": {},
    "outputs": [
@@ -477,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 132,
    "id": "b74d1914",
    "metadata": {},
    "outputs": [
@@ -581,13 +605,168 @@
        "FUR-CH-10002203        30   5003.1000"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.groupby('id_producto')[['cantidad', 'utilidad']].sum().sort_values('utilidad', ascending=False).head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "8b4784b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['numero_venta', 'mes_salida', 'dia_salida', 'ano_salida', 'mes_entrega',\n",
+      "       'dia_entrega', 'ano_entrega', 'metodo_envio', 'numero_cliente',\n",
+      "       'nombre_cliente', 'segmento', 'ciudad', 'estado', 'pais', 'id_producto',\n",
+      "       'ventas', 'cantidad', 'descuento', 'utilidad', 'costo_envio',\n",
+      "       'prioridad_envio', 'fecha_salida', 'fecha_entrega', 'tiempo_entrega'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "3e64dfcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_producto</th>\n",
+       "      <th>total_venta</th>\n",
+       "      <th>total_costo</th>\n",
+       "      <th>utilidad</th>\n",
+       "      <th>margen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>FUR-ADV-10000002</td>\n",
+       "      <td>159.120</td>\n",
+       "      <td>98.73</td>\n",
+       "      <td>60.390</td>\n",
+       "      <td>0.379525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>FUR-ADV-10000108</td>\n",
+       "      <td>350.070</td>\n",
+       "      <td>346.71</td>\n",
+       "      <td>3.360</td>\n",
+       "      <td>0.009598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FUR-ADV-10000183</td>\n",
+       "      <td>974.832</td>\n",
+       "      <td>1626.57</td>\n",
+       "      <td>-651.738</td>\n",
+       "      <td>-0.650623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FUR-ADV-10000188</td>\n",
+       "      <td>124.950</td>\n",
+       "      <td>120.75</td>\n",
+       "      <td>4.200</td>\n",
+       "      <td>-0.219488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>FUR-ADV-10000190</td>\n",
+       "      <td>222.360</td>\n",
+       "      <td>117.90</td>\n",
+       "      <td>104.460</td>\n",
+       "      <td>0.469779</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id_producto  total_venta  total_costo  utilidad    margen\n",
+       "0  FUR-ADV-10000002      159.120        98.73    60.390  0.379525\n",
+       "1  FUR-ADV-10000108      350.070       346.71     3.360  0.009598\n",
+       "2  FUR-ADV-10000183      974.832      1626.57  -651.738 -0.650623\n",
+       "3  FUR-ADV-10000188      124.950       120.75     4.200 -0.219488\n",
+       "4  FUR-ADV-10000190      222.360       117.90   104.460  0.469779"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_rentabilidad = calcular_rentabilidad(df)\n",
+    "resumen = resumen_rentabilidad(df_rentabilidad)\n",
+    "resumen.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3c6cfd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Informe de rentabilidad exportado con éxito.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.exportacion import exportar_excel\n",
+    "import os\n",
+    "\n",
+    "# Asegurar que el directorio de salida existe\n",
+    "os.makedirs(\"../data/outputs\", exist_ok=True)\n",
+    "\n",
+    "# Definir rutas de salida\n",
+    "ruta_excel = \"../data/outputs/informe_rentabilidad.xlsx\"\n",
+    "ruta_csv = \"../data/outputs/informe_rentabilidad.csv\"\n",
+    "\n",
+    "# Exportar\n",
+    "exportar_excel(resumen, ruta_excel)\n",
+    "resumen.to_csv(ruta_csv, index=False)\n",
+    "\n",
+    "print(\"✅ Informe de rentabilidad exportado con éxito.\")\n"
    ]
   }
  ],
