feat/Forma segura de convertir fechas previendo inconsistencias en los datos

--- a/notebooks/analisis.ipynb
+++ b/notebooks/analisis.ipynb
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "357f3a7e",
+   "id": "debfab55",
    "metadata": {},
    "source": [
-    "Agrupación de columnas relacionadas a la fecha"
+    "Reajuste del codigo para depurar posibles inconsistencias en el formato de la fecha"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0b7c8cb0",
+   "execution_count": null,
+   "id": "81eebdba",
    "metadata": {},
    "outputs": [
     {
@@ -65,28 +65,90 @@
       "3   2011-01-01    2011-01-05\n",
       "4   2011-01-01    2011-01-08\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>numero_venta</th>\n",
+       "      <th>mes_salida</th>\n",
+       "      <th>dia_salida</th>\n",
+       "      <th>ano_salida</th>\n",
+       "      <th>mes_entrega</th>\n",
+       "      <th>dia_entrega</th>\n",
+       "      <th>ano_entrega</th>\n",
+       "      <th>metodo_envio</th>\n",
+       "      <th>numero_cliente</th>\n",
+       "      <th>nombre_cliente</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pais</th>\n",
+       "      <th>id_producto</th>\n",
+       "      <th>ventas</th>\n",
+       "      <th>cantidad</th>\n",
+       "      <th>descuento</th>\n",
+       "      <th>utilidad</th>\n",
+       "      <th>costo_envio</th>\n",
+       "      <th>prioridad_envio</th>\n",
+       "      <th>fecha_salida</th>\n",
+       "      <th>fecha_entrega</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [numero_venta, mes_salida, dia_salida, ano_salida, mes_entrega, dia_entrega, ano_entrega, metodo_envio, numero_cliente, nombre_cliente, segmento, ciudad, estado, pais, id_producto, ventas, cantidad, descuento, utilidad, costo_envio, prioridad_envio, fecha_salida, fecha_entrega]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Asegurar tipos enteros\n",
+    "# Usar tipo Int64 que permite NaN\n",
     "for col in ['ano_salida', 'mes_salida', 'dia_salida', 'ano_entrega', 'mes_entrega', 'dia_entrega']:\n",
-    "    df[col] = df[col].astype(int)\n",
+    "    df[col] = df[col].astype('Int64')\n",
     "\n",
-    "# Convertir a datetime con columnas renombradas temporalmente\n",
+    "# Crear fechas con errores coercibles como NaT\n",
     "df['fecha_salida'] = pd.to_datetime(\n",
     "    df[['ano_salida', 'mes_salida', 'dia_salida']].rename(\n",
     "        columns={'ano_salida': 'year', 'mes_salida': 'month', 'dia_salida': 'day'}\n",
-    "    )\n",
+    "    ), errors='coerce'\n",
     ")\n",
     "\n",
     "df['fecha_entrega'] = pd.to_datetime(\n",
     "    df[['ano_entrega', 'mes_entrega', 'dia_entrega']].rename(\n",
     "        columns={'ano_entrega': 'year', 'mes_entrega': 'month', 'dia_entrega': 'day'}\n",
-    "    )\n",
+    "    ), errors='coerce'\n",
     ")\n",
+    "print(df[['fecha_salida', 'fecha_entrega']].head())\n",
     "\n",
-    "# Verificar resultado\n",
-    "print(df[['fecha_salida', 'fecha_entrega']].head())\n"
+    "\n"
    ]
   },
   {
@@ -99,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2aed13e1",
    "metadata": {},
    "outputs": [
@@ -138,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "999882b6",
    "metadata": {},
    "outputs": [
